@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.1003 2009-03-04 16:21:08 castaglia Exp $
+$Id: NEWS,v 1.1004 2009-03-05 18:56:11 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -62,6 +62,7 @@ CVS
 - Bug 3204 - Better support for installation and libs in prxs.  The prxs
   tool now handles the $Libraries$ build system hints in source files,
   and honors the DESTDIR environment variable.
+- Bug 3167 - Support rewriting of home directories.
 
 1.3.2 - Released 5-Feb-2009
 --------------------------------
